Add path group permutation tests